--- a/Lesson009/index.html
+++ b/Lesson009/index.html
@@ -7,6 +7,7 @@
     <title>Lesson 009</title>
 </head>
 <body>
+    <style> </style>
     <script src="./JS/script.js"></script>    
 </body>
 </html>
