--- a/Lesson015/src/index.html
+++ b/Lesson015/src/index.html
@@ -9,6 +9,8 @@
 <body>
     <div class = 'container'>
         <h2>WebPack Test</h2>
+
+        <div id="divPost"></div>
     </div>
 </body>
 </html>
