--- a/Lesson015/distr/index.html
+++ b/Lesson015/distr/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lesson 015</title>
-<script defer src="main.111726bad8ab308e48f1.js"></script><script defer src="analytics.4ac5b84c3095ec2e9268.js"></script></head>
+<script defer src="main.main.js"></script><script defer src="analytics.analytics.js"></script></head>
 <body>
     <div class = 'container'>
         <h2>WebPack Test</h2>
