Lesson 015: import/export from Lesson 004

--- a/Lesson015/distr/index.html
+++ b/Lesson015/distr/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class='container'>
-        <h2>WebPack Test</h2>
+        <h2 id="h2Title">WebPack Test</h2>
 
         <div id="divPost"></div>
     </div>
